--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ anyio==4.11.0
 bcrypt==4.1.2
 certifi==2025.8.3
 cffi==2.0.0
+click==8.3.0
 colorama==0.4.6
 cryptography==46.0.1
 dnspython==2.8.0
@@ -36,3 +37,4 @@ SQLAlchemy==2.0.43
 starlette==0.48.0
 typing-inspection==0.4.1
 typing_extensions==4.15.0
+uvicorn==0.37.0
