--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+alembic==1.16.5
 annotated-types==0.7.0
 anyio==4.11.0
 bcrypt==4.1.2
@@ -16,6 +17,8 @@ httpcore==1.0.9
 httpx==0.28.1
 idna==3.10
 iniconfig==2.1.0
+Mako==1.3.10
+MarkupSafe==3.0.3
 packaging==25.0
 passlib==1.7.4
 pluggy==1.6.0
